# Gnocchi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: ClassicNOP.gno  NOP.gno
specification and models/: ENGraphClassDiagram.puml  class.puml  grammar.txt
src/: main.cpp
src/front/: LocationProvider.cpp  LocationProvider.h  interpreter.cpp  interpreter.h  parser.y  scanner.h  scanner.l  scanner_utils.cpp
src/front/builder/: VertexBuilder.cpp  VertexBuilder.h
src/front/windows/: FlexLexer.h
src/graph/: ENEdge.cpp  ENEdge.h  ENGraph.cpp  ENGraph.h  ENGraphCommon.h  ENScope.cpp  ENScope.h  ENVertex.cpp  ENVertex.h  NotificationParameter.cpp  NotificationParameter.h  SemanticException.cpp  SemanticException.h
src/graph/expr/: BinaryExpr.cpp  BinaryExpr.h  ENExpr.cpp  ENExpr.h  ENExprs.h  ENOperators.h  ExprToStringVisitor.cpp  ExprToStringVisitor.h  ExprVisitor.h  LiteralExpr.cpp  LiteralExpr.h  NotifyExpr.cpp  NotifyExpr.h  UnaryExpr.cpp  UnaryExpr.h  VertexAccessExpr.cpp  VertexAccessExpr.h
src/graph/type/: ArrayType.cpp  ArrayType.h  ENType.cpp  ENType.h  ENTypes.h  PrimitiveType.cpp  PrimitiveType.h  TypeToStringVisitor.cpp  TypeToStringVisitor.h  TypeVisitor.h
src/graph/utils/: ENTypeManager.cpp  ENTypeManager.h  VertexBuilder.cpp  VertexBuilder.h
unittests/: CMakeLists.txt
unittests/front/: LocationProviderTest.cpp  ScannerTest.cpp
unittests/front/Parser/: EdgeCreationTest.cpp  NotifyExprCreationTest.cpp  VertexCreationTest.cpp
unittests/front/Scanner/: CharLiteralsEscapeCharactersScannerTest.cpp  CharLiteralsScannerTest.cpp  IdentifierScannerTest.cpp  NumberBooleanLiteralScannerTest.cpp  OperationScannerTest.cpp  OperatorScannerTest.cpp  PrimitiveTypeScannerTest.cpp  ScannerTest.cpp  SimpleTokensScannerTest.cpp  StringScannerTest.cpp  VisibilityScannerTest.cpp
unittests/front/builder/: VertexBuilderTest.cpp
unittests/graph/: ScopeTest.cpp
unittests/graph/Edge/: CreateMultipleEdgesTest.cpp
unittests/graph/Expr/: AccessExprResolveTest.cpp  BinaryExprToStringTest.cpp  ExprToStringTest.cpp  LiteralToStringTest.cpp  UnaryExprToStringTest.cpp
unittests/graph/Type/: TypeToStringArrayTest.cpp  TypeToStringPrimitiveTest.cpp
unittests/graph/utils/: VertexBuilderTest.cpp
